# Resonance

./: .gitignore  CMakeLists.txt  Resonance.sln
Resonance/: CMakeLists.txt  Resonance.vcxproj  Resonance.vcxproj.filters  invoker.hpp
Resonance/console/: console.cpp  console.hpp  include.hpp
Resonance/global/: assets.hpp  global.hpp  include.cpp  include.hpp
Resonance/hooking/: hooking.cpp  hooking.hpp  include.hpp
Resonance/hooking/d3d11_hook/: d3d11_hook.hpp  d3d11hook.hpp
Resonance/invoker/: invoker.hpp
Resonance/libs/scanner/: scanner.cpp
Resonance/main/: main.cpp
Resonance/menu/: menu.cpp  menu.hpp  menu_handler.cpp  menu_handler.hpp  namespaces.hpp
Resonance/menu/commands/: misc_commands.hpp  online_commands.hpp  player_commands.hpp  settings.hpp  teleport_commands.hpp  vehspawner_commands.hpp  world_commands.hpp
Resonance/menu/menu_handler/: menu_handler.cpp  menu_handler.hpp
Resonance/menu/widgets/: particle_widget.hpp
Resonance/ui/: include.hpp  ui.cpp
Resonance/update/: globals.hpp  include.hpp  invoker.hpp  natives.hpp  update.hpp
